# ibus

./: configure.ac
client/clutter/: Makefile.am  ibus-im.c  ibus-imcontext.c  ibus-imcontext.h
